--- a/part2/templates/index.html
+++ b/part2/templates/index.html
@@ -2,35 +2,39 @@
 <html>
   <head>
     <title>My App</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='estilos.css') }}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
-    <table>
-      <thead>
-        <tr>
-          <th>Air Data Mean</th>
-          <th>CO2 Data Mean</th>
-          <th>Time</th>
-        </tr>
-      </thead>
-      <tbody id="data-container">
-        <!-- Aquí se mostrarán los datos -->
-      </tbody>
-    </table>
+    <div id="table-header">
+      <span>Air Data Mean</span>
+      <span>CO2 Data Mean</span>
+      <span class="time">Time</span>
+    </div>
+    <div id="data-container">
+      <!-- Aquí se mostrarán los datos -->
+    </div>
 
     <script>
       // Función para actualizar los datos en el contenedor
       function updateData() {
         $.get('/data', function(data) {
-          data = JSON.parse(data);
-          $('#data-container').empty();
-          for (var i = 0; i < data.length; i++) {
-            var row = $('<tr>');
-            row.append($('<td>').text(data[i].air_data_mean));
-            row.append($('<td>').text(data[i].co2_data_mean));
-            row.append($('<td>').text(new Date(data[i].time*1000)));
-            $('#data-container').append(row);
+          // Convertir los datos JSON en objetos JavaScript
+          var rows = JSON.parse(data);
+          
+          // Crear una fila HTML para cada objeto
+          var html = '';
+          for (var i = 0; i < rows.length; i++) {
+            html += '<div class="data-row">';
+            html += '<span>' + rows[i].air_data_mean.toFixed(2) + '</span>';
+            html += '<span>' + rows[i].co2_data_mean.toFixed(2) + '</span>';
+            html += '<span class="time">' + new Date(rows[i].time * 1000).toLocaleString() + '</span>';
+            html += '</div>';
           }
+          
+          // Actualizar el contenido del contenedor con las filas HTML generadas
+          $('#data-container').html(html);
+         
         });
       }
 
